Update language controller
